ecommerce/frontend/src/components/Purchase.less
.purchase-header {
    display: flex;

    & > div {
        flex: 1 0 auto;
    }

    & .purchase-header-extra {
        text-align: end;
        align-self: center;
    }
}

.purchase-product {
    display: flex;
    gap: 8px;
    &-picture {
        img {
            height: 120px;
            width: 120px;
            object-fit: contain;
        }
    }

    &-details {
    }

    &-status {
    }

    &-extra {
    }
}

.horizontal-label {
    font-weight: bold;
    opacity: 70%;
}

